# exercism

./: .editorconfig  .gitignore  README.md  tracks.txt
bash/two-fer/: two_fer.sh
c/armstrong-numbers/: HELP.md  armstrong_numbers.c  tests.out
c/hello-world/: HELP.md  tests.out
c/resistor-color/: HELP.md  resistor_color.c  resistor_color.h  test-framework  test_resistor_color.c  tests.out
csharp/annalyns-infiltration/: AnnalynsInfiltration.cs  AnnalynsInfiltrationTests.cs
csharp/cars-assemble/: CarsAssemble.cs
csharp/interest-is-interesting/: InterestIsInteresting.cs
csharp/lucians-luscious-lasagna/: LuciansLusciousLasagna.cs
erlang/accumulate/: HELP.md  README.md
erlang/collatz-conjecture/: HELP.md
erlang/leap/: HELP.md
groovy/gigasecond/: HELP.md  README.md
groovy/hamming/: HELP.md
groovy/two-fer/: HELP.md  README.md
haskell/hello-world/: HELP.md
php/resistor-color/: ResistorColor.php
php/reverse-string/: ReverseString.php
python/: pyproject.toml
python/ghost-gobble-arcade-game/: arcade_game.py
python/ghost-gobble-arcade-game/.exercism/: metadata.json
python/guidos-gorgeous-lasagna/: lasagna.py
python/guidos-gorgeous-lasagna/.exercism/: metadata.json
python/little-sisters-vocab/: strings.py
python/little-sisters-vocab/.exercism/: metadata.json
python/meltdown-mitigation/: conditionals.py
python/meltdown-mitigation/.exercism/: metadata.json
racket/grains/: README.md  grains.rkt
racket/hello-world/: HELP.md  README.md
racket/leap/: HELP.md  README.md  leap.rkt
racket/two-fer/: HELP.md  two-fer.rkt
(+110 files in other folders)
